<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrosswordGame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_crossword_generated">Generated crossword</string>
    <string name="button_web_view">Show web view</string>
    <string name="button_another_view">Show another view</string>
    <string name="login">Login</string>
    <string name="forgotPass">Forgot password ?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Start">Start</string>
    <string name="Rank">Rank</string>
    <string name="create_account">Create new account</string>
    <string name="have_account">Have account ?</string>
    <string name="play_continue">Continue</string>
    <string name="finish">Finish</string>
    <string name="solve">Solve</string>
    <string name="myrank_by_match">My Rank</string>
    <string name="rank_by_match">Top Rank</string>
    <string name="user_name">UserName</string>
    <string name="re_password">Repassword</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="subject_title">Title</string>
    <string name="reveal">Reveal Word</string>
    

    <style name="DefaultButtonText">
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#979797</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_margin">3dp</item>
        <item name="android:textStyle">normal</item>
        <item name="android:textSize">20sp</item>
        <item name="android:shadowColor">#f9f9f9</item>
        <item name="android:shadowDx">1</item>
        <item name="android:shadowDy">1</item>
        <item name="android:shadowRadius">1</item>
    </style>
        <string name="account_setting">Setting</string>
        <string name="help">Help</string>
        <string name="about">About</string>
        <string name="feedBack">FeedBack</string>
        <string name="cancel">Cancel</string>
        <string name="take_part_in">Take Part In</string>
        <string name="start">Start</string>
        <string name="end">End</string>
        

</resources>