<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:compatibility="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.com.myapp.activity.PlayActivity" >

    <item
        android:id="@+id/action_timer"
        android:title="00:00"
        compatibility:actionViewClass="android.widget.TextView"
        compatibility:showAsAction="always"/>
    <item
        android:id="@+id/action_check"
        android:orderInCategory="100"
        android:title="@string/finish"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_solve"
        android:orderInCategory="100"
        android:title="@string/solve"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_play_continue"
        android:orderInCategory="100"
        android:title="@string/play_continue"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_myRankCompetition"
        android:orderInCategory="100"
        android:title="@string/myrank_by_match"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_getRankByCompetition"
        android:orderInCategory="100"
        android:title="@string/rank_by_match"
        app:showAsAction="ifRoom"/>

</menu>